--- a/.classpath
+++ b/.classpath
@@ -3,5 +3,6 @@
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.7"/>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="lib" path="libs/Java-WebSocket-1.3.9.jar" sourcepath="libs/Java-WebSocket-1.3.9-sources.jar"/>
+	<classpathentry kind="lib" path="libs/fastjson-1.2.54.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
