--- a/.classpath
+++ b/.classpath
@@ -4,5 +4,6 @@
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="lib" path="libs/Java-WebSocket-1.3.9.jar" sourcepath="libs/Java-WebSocket-1.3.9-sources.jar"/>
 	<classpathentry kind="lib" path="libs/fastjson-1.2.54.jar"/>
+	<classpathentry kind="lib" path="libs/lipermi-0.4.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
